user_register fixed
